--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1>Test page</h1>
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Szkoła ponadgimnazjalna</title>
+</head>
+<body>
+    <h1>Pracownia Programowania Aplikacji Internetowych</h1>
+    <ul>
+        <li>
+            <a href="./zadania/1/polski.html">Zadanie 1</a>
+        </li>
+    </ul>
+</body>
+</html>
