--- a/zadania/1/polski.html
+++ b/zadania/1/polski.html
@@ -8,17 +8,17 @@
     <link rel="stylesheet" href="styl.css">
 </head>
 <body>
-    <div class="header">
+    <div id="header">
         <h1>Oceny uczniów: język polski</h1>
     </div>
-    <div class="sidebar">
+    <div id="sidebar">
         <h2>Lista uczniów:</h2>
     </div>
-    <div class="container">
+    <div id="container">
         <h2>Uczeń:</h2>
         <p>Średnia ocen z języka polskiego:</p>
     </div>
-    <div class="footer">
+    <div id="footer">
         <h3>Zespół Szkół Ponadgimnazjalnych</h3>
         <p>Stronę opracował: XXXXXXXXXXX</p>
     </div>
