--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <li>
             <a href="./zadania/1/polski.html">Zadanie 1</a>
         </li>
+        <li>
+            <a href="./zadania/2/samochody.html">Zadanie 2</a>
+        </li>
     </ul>
 </body>
 </html>
