Remove float left

--- a/zadania/2/samochody.html
+++ b/zadania/2/samochody.html
@@ -11,23 +11,25 @@
     <div id="header">
         <h1>Wynajem Samochodów</h1>
     </div>
-    <div id="left">
-        <h2>DZIŚ POLECAMY TOYOTĘ ROCZNIK 2014</h2>
-        <h2>WSZYSTKIE DOSTĘPNE SAMOCHODY</h2>
-    </div>
-    <div id="center">
-        <h2>ZAMÓWIONE AUTA Z NUMERAMI TELEFONÓW KLIENTÓW</h2>
-    </div>
-    <div id="right">
-        <h2>NASZA OFERTA</h2>
-        <ul>
-            <li>Fiat</li>
-            <li>Toyota</li>
-            <li>Opel</li>
-            <li>Mercedes</li>
-        </ul>
-        <p>Tu pobierzesz naszą <a href="#">bazę danych</a></p>
-        <p>Autor strony: 00000000000</p>
+    <div id="container">
+        <div id="left">
+            <h2>DZIŚ POLECAMY TOYOTĘ ROCZNIK 2014</h2>
+            <h2>WSZYSTKIE DOSTĘPNE SAMOCHODY</h2>
+        </div>
+        <div id="center">
+            <h2>ZAMÓWIONE AUTA Z NUMERAMI TELEFONÓW KLIENTÓW</h2>
+        </div>
+        <div id="right">
+            <h2>NASZA OFERTA</h2>
+            <ul>
+                <li>Fiat</li>
+                <li>Toyota</li>
+                <li>Opel</li>
+                <li>Mercedes</li>
+            </ul>
+            <p>Tu pobierzesz naszą <a href="#">bazę danych</a></p>
+            <p>Autor strony: 00000000000</p>
+        </div>
     </div>
 </body>
 </html>
