Added taks 3 to tasks list

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <li>
             <a href="./zadania/2/samochody.html">Zadanie 2</a>
         </li>
+        <li>
+            <a href="./zadania/3/ogloszenia.html">Zadanie 3</a>
+        </li>
     </ul>
 </body>
 </html>
