Added page structure

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         <li>
             <a href="./zadania/3/ogloszenia.html">Zadanie 3</a>
         </li>
+        <li>
+            <a href="./zadania/4/ogloszenia.html">Zadanie 4</a>
+        </li>
     </ul>
 </body>
 </html>
