--- a/zadania/4/ogloszenia.html
+++ b/zadania/4/ogloszenia.html
@@ -8,6 +8,70 @@
     <link rel="stylesheet" href="styl5.css">
 </head>
 <body>
-    
+    <div id="header">
+        <h1>Portal Ogłoszeniowy</h1>
+    </div>
+    <div id="container__contact">
+        <div id="one" class="row__info">
+            <img src="./logo-male.png" alt="logo">
+        </div>
+        <div id="two" class="row__info">
+            <h3>Adres</h3>
+            <p>ul. Morska 45<br>
+            Gdynia</p>
+        </div>
+        <div id="three" class="row__info">
+            <h3>Telefon</h3>
+            <p>601601601</p>
+        </div>
+        <div id="four" class="row__info">
+            <h3>e-mail</h3>
+            <p>ogloszenia@poczta.pl</p>
+        </div>
+    </div>
+    <div id="container__main">
+        <div id="left">
+            <h2>Ceny ogłoszeń</h2>
+            <table>
+                <tr>
+                    <th>Liczba<br>ogłoszeń</th>
+                    <th>Cena<br>ogłoszenia</th>
+                    <th>Bonus</th>
+                </tr>
+                <tr>
+                    <td>1 - 50</td>
+                    <td>2 PLN</td>
+                    <td rowspan="2">Subskrybcja newslettera to upust 0,20 PLN na<br>ogłoszenie</td>
+                </tr>
+                <tr>
+                    <td>50 i więcej</td>
+                    <td>1 PLN</td>
+                </tr>
+            </table>
+        </div>
+        <div id="center">
+            <h2>Witamy na stronie naszego portalu!</h2>
+            <img src="./logo-duze.png" alt="logo">
+        </div>
+        <div id="right">
+            <h2>Ile kosztuje ogłoszenie?</h2>
+            <form action="">
+                <p>
+                    <label for="numer">Podaj liczbę ogłoszeń</label>
+                    <br>
+                    <input name="numer" type="number">
+                </p>
+                <p>
+                    <label for="newsletter">Policz upust na newsletter</label>
+                    <br>
+                    <input name="newsletter" type="checkbox">
+                </p>
+                <input type="submit" value="Oblicz">
+            </form>
+        </div>
+    </div>
+    <div id="footer">
+        Portal ogłoszeniowy opracował: 00000000000
+    </div>
 </body>
 </html>
