--- a/zadania/4/ogloszenia.html
+++ b/zadania/4/ogloszenia.html
@@ -13,7 +13,7 @@
     </div>
     <div id="container__contact">
         <div id="one" class="row__info">
-            <img src="./logo-male.png" alt="logo">
+            <img src="./logo-male.png" alt="logo male">
         </div>
         <div id="two" class="row__info">
             <h3>Adres</h3>
@@ -51,7 +51,7 @@
         </div>
         <div id="center">
             <h2>Witamy na stronie naszego portalu!</h2>
-            <img src="./logo-duze.png" alt="logo">
+            <img src="./logo-duze.png" alt="logo duze">
         </div>
         <div id="right">
             <h2>Ile kosztuje ogłoszenie?</h2>
