Replace id to class

--- a/zadania/4/ogloszenia.html
+++ b/zadania/4/ogloszenia.html
@@ -12,40 +12,40 @@
         <h1>Portal Ogłoszeniowy</h1>
     </div>
     <div id="container__contact">
-        <div id="one" class="row__info">
+        <div class="row__info">
             <img src="./logo-male.png" alt="logo male">
         </div>
-        <div id="two" class="row__info">
+        <div class="row__info">
             <h3>Adres</h3>
             <p>ul. Morska 45<br>
             Gdynia</p>
         </div>
-        <div id="three" class="row__info">
+        <div class="row__info">
             <h3>Telefon</h3>
             <p>601601601</p>
         </div>
-        <div id="four" class="row__info">
+        <div class="row__info">
             <h3>e-mail</h3>
             <p>ogloszenia@poczta.pl</p>
         </div>
     </div>
     <div id="container__main">
-        <div id="left">
+        <div class="col">
             <h2>Ceny ogłoszeń</h2>
             <table>
                 <tr>
-                    <th>Liczba<br>ogłoszeń</th>
-                    <th>Cena<br>ogłoszenia</th>
-                    <th>Bonus</th>
+                    <th width="25%">Liczba<br>ogłoszeń</th>
+                    <th width="25%">Cena<br>ogłoszenia</th>
+                    <th width="50%">Bonus</th>
                 </tr>
                 <tr>
-                    <td>1 - 50</td>
-                    <td>2 PLN</td>
-                    <td rowspan="2">Subskrybcja newslettera to upust 0,20 PLN na<br>ogłoszenie</td>
+                    <td width="25%">1 - 50</td>
+                    <td width="25%">2 PLN</td>
+                    <td width="50%" rowspan="2">Subskrybcja newslettera to upust 0,20 PLN na<br>ogłoszenie</td>
                 </tr>
                 <tr>
-                    <td>50 i więcej</td>
-                    <td>1 PLN</td>
+                    <td width="25%">50 i więcej</td>
+                    <td width="25%">1 PLN</td>
                 </tr>
             </table>
         </div>
@@ -53,7 +53,7 @@
             <h2>Witamy na stronie naszego portalu!</h2>
             <img src="./logo-duze.png" alt="logo duze">
         </div>
-        <div id="right">
+        <div class="col">
             <h2>Ile kosztuje ogłoszenie?</h2>
             <form action="">
                 <p>
