--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <li>
             <a href="./zadania/4/ogloszenia.html">Zadanie 4</a>
         </li>
+        <li>
+            <a href="./zadania/5/index.html">Zadanie 5 (GIMP)</a>
+        </li>
     </ul>
 </body>
 </html>
