--- a/index.html
+++ b/index.html
@@ -2,28 +2,34 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Szkoła ponadgimnazjalna</title>
+    <title>PPAI Zadania - Michał</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Pracownia Programowania Aplikacji Internetowych</h1>
-    <ul>
-        <li>
-            <a href="./zadania/1/polski.html">Zadanie 1</a>
-        </li>
-        <li>
-            <a href="./zadania/2/samochody.html">Zadanie 2</a>
-        </li>
-        <li>
-            <a href="./zadania/3/ogloszenia.html">Zadanie 3</a>
-        </li>
-        <li>
-            <a href="./zadania/4/ogloszenia.html">Zadanie 4</a>
-        </li>
-        <li>
-            <a href="./zadania/5/index.html">Zadanie 5 (GIMP)</a>
-        </li>
-    </ul>
+    <div id="container">
+        <header class="header">
+            <div class="header__box">
+                <div class="header__content">
+                <h1 class="header__title">
+                    Pracownia Programowania<br>
+                    Aplikacji Internetowych
+                </h1>
+                <nav class="navbar">
+                    <ul class="navbar__list">
+                        <li class="navbar__element"><a href="./zadania/menu/js.html" class="link js">JAVASCRIPT</a></li>
+                        <li class="navbar__element"><a href="./zadania/menu/html.html" class="link html">HTML<span class="html__symbol">&</span>CSS</a></li>
+                        <li class="navbar__element"><a href="./zadania/menu/e14.html" class="link e14">E.14</a></li>
+                        <li class="navbar__element"><a href="./zadania/menu/php.html" class="link php">PHP</a></li>
+                    </ul>
+                </nav>
+            </div>
+            </div>
+        </header>
+        <footer>
+            <div class="footer">
+                <p class="footer__author">Michał Bilski 4G &copy 2019</p>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
