--- a/zadania/menu/html.html
+++ b/zadania/menu/html.html
@@ -25,8 +25,8 @@
                         class="link">Zadanie 4</a></li>
                         <li class="navbar__element"><a href="../5/index.html"
                         class="link">Zadanie 5</a></li>
-                        <li class="navbar__element"><a href="../inkscape/index.html"
-                        class="link">Inkscape</a></li>
+                        <li class="navbar__element"><a href="../inkscape.zip"
+                        class="link" download>Inkscape</a></li>
                         <hr width='50%'>
                         <li class="navbar__element"><a href="../../index.html"
                             class="link link-back">Powrót</a></li>
