Added first JS task

--- a/zadania/menu/html.html
+++ b/zadania/menu/html.html
@@ -15,15 +15,15 @@
                 </h1>
                 <nav class="navbar">
                     <ul class="navbar__list navbar__list-tasks">
-                        <li class="navbar__element"><a href="../1/polski.html" class="link">Zadanie 1</a></li>
+                        <li class="navbar__element"><a href="../html/1/polski.html" class="link">Zadanie 1</a></li>
                         <li class="navbar__element"><a
-                        href="../2/samochody.html" class="link"><span
+                        href="../html/2/samochody.html" class="link"><span
                         class="html__symbol"></span>Zadanie 2</a></li>
-                        <li class="navbar__element"><a href="../3/ogloszenia.html"
+                        <li class="navbar__element"><a href="../html/4/ogloszenia.html"
                         class="link">Zadanie 3</a></li>
-                        <li class="navbar__element"><a href="../4/ogloszenia.html"
+                        <li class="navbar__element"><a href="../html/4/ogloszenia.html"
                         class="link">Zadanie 4</a></li>
-                        <li class="navbar__element"><a href="../5/index.html"
+                        <li class="navbar__element"><a href="../html/5/index.html"
                         class="link">Zadanie 5</a></li>
                         <li class="navbar__element"><a href="../inkscape.zip"
                         class="link" download>Inkscape</a></li>
