--- a/zadania/menu/js.html
+++ b/zadania/menu/js.html
@@ -15,6 +15,7 @@
                 </h1>
                 <nav class="navbar">
                     <ul class="navbar__list navbar__list-tasks">
+                        <li class="navbar__element"><a href="../js/1/index.html" class="link">Zadanie 1</a></li>
                         <hr width='60%'>
                         <li class="navbar__element"><a href="../../index.html"
                             class="link link-back">Powrót</a></li>
