--- a/zadania/menu/js.html
+++ b/zadania/menu/js.html
@@ -16,6 +16,7 @@
                 <nav class="navbar">
                     <ul class="navbar__list navbar__list-tasks">
                         <li class="navbar__element"><a href="../js/1/index.html" class="link">Zadanie 1</a></li>
+                        <li class="navbar__element"><a href="../js/2/index.html" class="link">Zadanie 2</a></li>
                         <hr width='60%'>
                         <li class="navbar__element"><a href="../../index.html"
                             class="link link-back">Powrót</a></li>
