--- a/zadania/menu/js.html
+++ b/zadania/menu/js.html
@@ -18,6 +18,7 @@
                         <li class="navbar__element"><a href="../js/1/index.html" class="link">Zadanie 1</a></li>
                         <li class="navbar__element"><a href="../js/2/index.html" class="link">Zadanie 2</a></li>
                         <li class="navbar__element"><a href="../js/3/index.html" class="link">Zadanie 3</a></li>
+                        <li class="navbar__element"><a href="../js/4/index.html" class="link">Zadanie 4</a></li>
                         <hr width='60%'>
                         <li class="navbar__element"><a href="../../index.html"
                             class="link link-back">Powrót</a></li>
