Added new tasks

--- a/zadania/menu/js.html
+++ b/zadania/menu/js.html
@@ -19,6 +19,9 @@
                         <li class="navbar__element"><a href="../js/2/index.html" class="link">Zadanie 2</a></li>
                         <li class="navbar__element"><a href="../js/3/index.html" class="link">Zadanie 3</a></li>
                         <li class="navbar__element"><a href="../js/4/index.html" class="link">Zadanie 4</a></li>
+                        <li class="navbar__element"><a href="../js/5/index.html" class="link">Zadanie 5</a></li>
+                        <li class="navbar__element"><a href="../js/6/index.html" class="link">Zadanie 6</a></li>
+                        <li class="navbar__element"><a href="../js/7/index.html" class="link">Zadanie 7</a></li>
                         <hr width='60%'>
                         <li class="navbar__element"><a href="../../index.html"
                             class="link link-back">Powrót</a></li>
