Added link to menu

--- a/zadania/menu/js.html
+++ b/zadania/menu/js.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>PPAI Zadania - Michał</title>
     <link rel="stylesheet" href="../../style.css">
+    <style>
+        .navbar__list {
+            font-size: 1.5em !important;
+        }
+    </style>
 </head>
 <body>
     <div id="container">
@@ -11,7 +16,7 @@
             <div class="header__box">
                 <div class="header__content">
                 <h1 class="header__title">
-                    Zadania HTML
+                    Zadania JavaScript
                 </h1>
                 <nav class="navbar">
                     <ul class="navbar__list navbar__list-tasks">
