--- a/zadania/menu/js.html
+++ b/zadania/menu/js.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../../style.css">
     <style>
         .navbar__list {
-            font-size: 1.5em !important;
+            font-size: 1.4em !important;
         }
     </style>
 </head>
@@ -27,6 +27,10 @@
                         <li class="navbar__element"><a href="../js/5/index.html" class="link">Zadanie 5</a></li>
                         <li class="navbar__element"><a href="../js/6/index.html" class="link">Zadanie 6</a></li>
                         <li class="navbar__element"><a href="../js/7/index.html" class="link">Zadanie 7</a></li>
+                        <li class="navbar__element"><a href="../js/8/index.html" class="link">Zadanie 8</a></li>
+                        <li class="navbar__element"><a href="../js/9/index.html" class="link">Zadanie 9</a></li>
+                        <li class="navbar__element"><a href="../js/10/index.html" class="link">Zadanie 10</a></li>
+                        <li class="navbar__element"><a href="../js/11/index.html" class="link">Zadanie 11</a></li>
                         <hr width='60%'>
                         <li class="navbar__element"><a href="../../index.html"
                             class="link link-back">Powrót</a></li>
