--- a/zadania/js/7/index.html
+++ b/zadania/js/7/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pętle</title>
+    <title>Ciąg liczb</title>
 </head>
 <body>
     <h1>Ciąg liczb</h1>
