--- a/zadania/menu/js.html
+++ b/zadania/menu/js.html
@@ -31,6 +31,7 @@
                         <li class="navbar__element"><a href="../js/9/index.html" class="link">Zadanie 9</a></li>
                         <li class="navbar__element"><a href="../js/10/index.html" class="link">Zadanie 10</a></li>
                         <li class="navbar__element"><a href="../js/11/index.html" class="link">Zadanie 11</a></li>
+                        <li class="navbar__element"><a href="../js/12/index.html" class="link">Zadanie 12</a></li>
                         <hr width='60%'>
                         <li class="navbar__element"><a href="../../index.html"
                             class="link link-back">Powrót</a></li>
