--- a/zadania/menu/js.html
+++ b/zadania/menu/js.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="../../style.css">
     <style>
         .navbar__list {
-            font-size: 1.4em !important;
+            font-size: 1.2em !important;
+            columns: 2;
+            padding: 0 15%;
+        }
+        .menu__link {
+          font-size: 1.4em;
         }
     </style>
 </head>
@@ -32,10 +37,10 @@
                         <li class="navbar__element"><a href="../js/10/index.html" class="link">Zadanie 10</a></li>
                         <li class="navbar__element"><a href="../js/11/index.html" class="link">Zadanie 11</a></li>
                         <li class="navbar__element"><a href="../js/12/index.html" class="link">Zadanie 12</a></li>
-                        <hr width='60%'>
-                        <li class="navbar__element"><a href="../../index.html"
-                            class="link link-back">Powrót</a></li>
                     </ul>
+                    <hr width='60%'>
+                    <p class="navbar__element menu__link"><a href="../../index.html"
+                        class="link link-back">Powrót</a></p>
                 </nav>
             </div>
             </div>
