--- a/zadania/menu/js.html
+++ b/zadania/menu/js.html
@@ -37,6 +37,9 @@
                         <li class="navbar__element"><a href="../js/10/index.html" class="link">Zadanie 10</a></li>
                         <li class="navbar__element"><a href="../js/11/index.html" class="link">Zadanie 11</a></li>
                         <li class="navbar__element"><a href="../js/12/index.html" class="link">Zadanie 12</a></li>
+                        <li class="navbar__element"><a href="../js/13/index.html" class="link">Zadanie 13</a></li>
+                        <li class="navbar__element"><a href="../js/14/index.html" class="link">Zadanie 14</a></li>
+                        <li class="navbar__element"><a href="../js/15/index.html" class="link">Zadanie 15</a></li>
                     </ul>
                     <hr width='60%'>
                     <p class="navbar__element menu__link"><a href="../../index.html"
