--- a/zadania/menu/php.html
+++ b/zadania/menu/php.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <title>PPAI Zadania - Michał</title>
     <link rel="stylesheet" href="../../style.css">
+    <style>
+        .navbar__list {
+            font-size: 1.2em !important;
+            columns: 2;
+            padding: 0 15%;
+        }
+        .menu__link {
+          font-size: 1.4em;
+        }
+    </style>
 </head>
 <body>
     <div id="container">
@@ -11,13 +21,20 @@
             <div class="header__box">
                 <div class="header__content">
                 <h1 class="header__title">
-                    Zadania HTML
+                    Zadania PHP
                 </h1>
                 <nav class="navbar">
                     <ul class="navbar__list navbar__list-tasks">
-                        <hr width='60%'>
-                        <li class="navbar__element"><a href="../../index.html"
-                            class="link link-back">Powrót</a></li>
+                        <li class="navbar__element"><a href="http://ppai.cba.pl/1.php" class="link">Zadanie 1</a></li>
+                        <li class="navbar__element"><a href="http://ppai.cba.pl/2.php" class="link">Zadanie 2</a></li>
+                        <li class="navbar__element"><a href="http://ppai.cba.pl/3.php" class="link">Zadanie 3</a></li>
+                        <li class="navbar__element"><a href="http://ppai.cba.pl/4.php" class="link">Zadanie 4</a></li>
+                        <li class="navbar__element"><a href="http://ppai.cba.pl/5.php" class="link">Zadanie 5</a></li>
+                        <li class="navbar__element"><a href="http://ppai.cba.pl/6.php" class="link">Zadanie 6</a></li>
+                        <li class="navbar__element"><a href="http://ppai.cba.pl/7.php" class="link">Zadanie 7</a></li>
+                        <li class="navbar__element"><a href="http://ppai.cba.pl/8.php" class="link">Zadanie 8</a></li>
+                        <li class="navbar__element"><a href="http://ppai.cba.pl/9.php" class="link">Zadanie 9</a></li>
+                        <li class="navbar__element"><a href="http://ppai.cba.pl/10.php" class="link">Zadanie 10</a></li>
                     </ul>
                 </nav>
             </div>
