--- a/zadania/menu/php.html
+++ b/zadania/menu/php.html
@@ -33,8 +33,8 @@
                         <li class="navbar__element"><a href="http://ppai.cba.pl/6.php" class="link">Zadanie 6</a></li>
                         <li class="navbar__element"><a href="http://ppai.cba.pl/7.php" class="link">Zadanie 7</a></li>
                         <li class="navbar__element"><a href="http://ppai.cba.pl/8.php" class="link">Zadanie 8</a></li>
-                        <li class="navbar__element"><a href="http://ppai.cba.pl/9.php" class="link">Zadanie 9</a></li>
-                        <li class="navbar__element"><a href="http://ppai.cba.pl/10.php" class="link">Zadanie 10</a></li>
+                        <li class="navbar__element"><a href="http://ppai.cba.pl/cookies/index.php" class="link">Zadanie 9</a></li>
+                        <li class="navbar__element"><a href="http://ppai.cba.pl/logowanie/index.php" class="link">Zadanie 10</a></li>
                     </ul>
                 </nav>
             </div>
