--- a/zadania/menu/php.html
+++ b/zadania/menu/php.html
@@ -35,6 +35,7 @@
                         <li class="navbar__element"><a href="http://ppai.cba.pl/8.php" class="link">Zadanie 8</a></li>
                         <li class="navbar__element"><a href="http://ppai.cba.pl/cookies/index.php" class="link">Zadanie 9</a></li>
                         <li class="navbar__element"><a href="http://ppai.cba.pl/logowanie/index.php" class="link">Zadanie 10</a></li>
+                        <li class="navbar__element"><a href="http://ppai.cba.pl/11.php" class="link">Zadanie 11</a></li>
                     </ul>
                 </nav>
             </div>
