--- a/zadania/menu/php.html
+++ b/zadania/menu/php.html
@@ -36,6 +36,7 @@
                         <li class="navbar__element"><a href="http://ppai.cba.pl/cookies/index.php" class="link">Zadanie 9</a></li>
                         <li class="navbar__element"><a href="http://ppai.cba.pl/logowanie/index.php" class="link">Zadanie 10</a></li>
                         <li class="navbar__element"><a href="http://ppai.cba.pl/11.php" class="link">Zadanie 11</a></li>
+                        <li class="navbar__element"><a href="http://ppai.cba.pl/egz1/auto.php" class="link">Zadanie 12</a></li>
                     </ul>
                 </nav>
             </div>
